test/assignment/undefined.lox
unknown = "what"; // error: cannot find variable
